fix scrollbar bg

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,8 +37,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 html::-webkit-scrollbar-track {
-    background: var(--text-color);
-    border-radius: 5rem;
+    background: transparent;
 }
 
 html::-webkit-scrollbar-thumb:hover {
@@ -110,7 +109,7 @@ header {
 }
 
 /* Making Responsive */
-@media (max-width:1058px) {
+@media (max-width: 1058px) {
     header {
         padding: 18px 60px;
     }
@@ -124,7 +123,7 @@ header {
     }
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
     header {
         padding: 18px 4%;
     }
@@ -137,7 +136,6 @@ header {
         font-size: 2.4rem;
     }
 }
-
 
 @media (max-width: 360px) {
     .home-text span {
